fixing spacing

--- a/src/motifs/motifs.css
+++ b/src/motifs/motifs.css
@@ -14,6 +14,7 @@
 
 .motif-name {
     font-size: 24px;
+    overflow-wrap: break-word;
 }
 
 .content {
